more example tests?