@@ -22,4 +22,7 @@ dependencies {
 
 tasks.test {
     useJUnitPlatform()
+    jvmArgs(
+        "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED",
+    )
 }
